# diary-django

./: .Dockerfile.swp  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  filter.py  plan.md  prefilter.py  pyproject.toml  requirements.txt  run.sh
diary/: settings.py  urls.py
diary/management/commands/: initadmin.py
diary/settings/: secrets.py  settings_base.py  settings_local.py  settings_prod.py
notebooks/: Untitled.ipynb
notebooks_doodles/: load_md.py
templates/: base.html
templates/diary/: entry.html  index.html
templates/registration/: login.html
viewer/: admin.py  models.py  tests.py  urls.py  util.py  views.py
viewer/migrations/: 0001_initial.py  0002_auto_20180325_0417.py  0003_auto_20180325_0436.py  0004_auto_20180325_0611.py  0005_auto_20180328_0211.py  0006_entry_tags.py
